Bug 196416 - (testcase) Selecting a widget to paste the URL mimedata (middle-click) on Plasma crashes it. (QMimeDataPrivate::retrieveTypedData, .. ,Plasma::ContainmentPrivate::dropData)
Summary: (testcase) Selecting a widget to paste the URL mimedata (middle-click) on Pla...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: testcase
: 199948 202420 203565 206521 206574 206780 207594 208574 211921 211932 215312 215492 215611 216455 221233 235612 276370 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-06-14 00:12 UTC by jbrsubscribe
Modified: 2011-06-26 14:22 UTC (History)
19 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jbrsubscribe 2009-06-14 00:12:24 UTC
Application that crashed: plasma-desktop
Version of the application: 0.3
KDE Version: 4.2.90 (KDE 4.2.90 (KDE 4.3 Beta2)) "release 138"
Qt Version: 4.5.2
Operating System: Linux 2.6.27.23-0.1-default x86_64
Distribution: "openSUSE 11.1 (x86_64)"

What I was doing when the application crashed:
Plasma appears to have crashed when I clicked on a plasmoid with Notes and Web on it.

 -- Backtrace:
Application: Plasma Workspace (kdeinit), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f29a244f750 (LWP 24266))]

Thread 2 (Thread 0x7f298113f950 (LWP 24268)):
#0  0x00007f29a1c67d59 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f29a1ed88ab in QWaitCondition::wait (this=<value optimized out>, mutex=0x1112398, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  0x00007f29a0b1900c in QHostInfoAgent::run (this=0x1112380) at kernel/qhostinfo.cpp:260
#3  0x00007f29a1ed77d5 in QThreadPrivate::start (arg=0x1112380) at thread/qthread_unix.cpp:188
#4  0x00007f29a1c64070 in start_thread () from /lib64/libpthread.so.0
#5  0x00007f299e7e810d in clone () from /lib64/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f29a244f750 (LWP 24266)):
[KCrash Handler]
#5  QMimeDataPrivate::retrieveTypedData (this=0x31, format=@0x218ebb8, type=QVariant::ByteArray) at kernel/qmimedata.cpp:59
#6  0x00007f29a1fcd122 in QMimeData::data (this=<value optimized out>, mimeType=@0x218ebb8) at kernel/qmimedata.cpp:524
#7  0x00007f29989e128a in Plasma::ContainmentPrivate::dropData (this=0xa862f0, event=<value optimized out>) at /usr/src/debug/kdelibs-4.2.90/plasma/containment.cpp:1200
#8  0x00007f29989e1801 in Plasma::Containment::mouseReleaseEvent (this=0x9b5560, event=0x7fffaa4ccbc0) at /usr/src/debug/kdelibs-4.2.90/plasma/containment.cpp:490
#9  0x00007f299f8fc886 in QGraphicsItem::sceneEvent (this=0x7fffaa4cbce0, event=0x31) at graphicsview/qgraphicsitem.cpp:5029
#10 0x00007f299f9228d5 in QGraphicsScenePrivate::sendMouseEvent (this=0x804b20, mouseEvent=0x7fffaa4ccbc0) at graphicsview/qgraphicsscene.cpp:1230
#11 0x00007f299f92ae75 in QGraphicsScene::mouseReleaseEvent (this=<value optimized out>, mouseEvent=0x7fffaa4ccbc0) at graphicsview/qgraphicsscene.cpp:4445
#12 0x00007f299f92cabf in QGraphicsScene::event (this=0x7ce380, event=0x7fffaa4ccbc0) at graphicsview/qgraphicsscene.cpp:3808
#13 0x00007f299f38661c in QApplicationPrivate::notify_helper (this=0x673a50, receiver=0x7ce380, e=0x7fffaa4ccbc0) at kernel/qapplication.cpp:4058
#14 0x00007f299f38db7e in QApplication::notify (this=0x66ac50, receiver=0x7ce380, e=0x7fffaa4ccbc0) at kernel/qapplication.cpp:4023
#15 0x00007f29a045504b in KApplication::notify (this=0x66ac50, receiver=0x7ce380, event=0x7fffaa4ccbc0) at /usr/src/debug/kdelibs-4.2.90/kdeui/kernel/kapplication.cpp:302
#16 0x00007f29a1fc049c in QCoreApplication::notifyInternal (this=0x66ac50, receiver=0x7ce380, event=0x7fffaa4ccbc0) at kernel/qcoreapplication.cpp:610
#17 0x00007f299f93eec1 in QGraphicsView::mouseReleaseEvent (this=0xd9b3d0, event=0x7fffaa4cd3b0) at ../../src/corelib/kernel/qcoreapplication.h:213
#18 0x00007f299f3d5e1f in QWidget::event (this=0xd9b3d0, event=0x7fffaa4cd3b0) at kernel/qwidget.cpp:7549
#19 0x00007f299f71d8a6 in QFrame::event (this=0xd9b3d0, e=0x7fffaa4cd3b0) at widgets/qframe.cpp:559
#20 0x00007f299f93e93b in QGraphicsView::viewportEvent (this=0xd9b3d0, event=0x7fffaa4cd3b0) at graphicsview/qgraphicsview.cpp:2919
#21 0x00007f29a1fbf797 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0xdaf6e0, event=0x7fffaa4cd3b0) at kernel/qcoreapplication.cpp:726
#22 0x00007f299f3865ec in QApplicationPrivate::notify_helper (this=0x673a50, receiver=0xdaf6e0, e=0x7fffaa4cd3b0) at kernel/qapplication.cpp:4054
#23 0x00007f299f38d999 in QApplication::notify (this=<value optimized out>, receiver=0xdaf6e0, e=0x7fffaa4cd3b0) at kernel/qapplication.cpp:3760
#24 0x00007f29a045504b in KApplication::notify (this=0x66ac50, receiver=0xdaf6e0, event=0x7fffaa4cd3b0) at /usr/src/debug/kdelibs-4.2.90/kdeui/kernel/kapplication.cpp:302
#25 0x00007f29a1fc049c in QCoreApplication::notifyInternal (this=0x66ac50, receiver=0xdaf6e0, event=0x7fffaa4cd3b0) at kernel/qcoreapplication.cpp:610
#26 0x00007f299f38d210 in QApplicationPrivate::sendMouseEvent (receiver=0xdaf6e0, event=0x7fffaa4cd3b0, alienWidget=0xdaf6e0, nativeWidget=0xd9b3d0, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:216
#27 0x00007f299f3f424e in QETWidget::translateMouseEvent (this=0xd9b3d0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4415
#28 0x00007f299f3f327f in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fffaa4ceee0) at kernel/qapplication_x11.cpp:3556
#29 0x00007f299f41b554 in x11EventSourceDispatch (s=<value optimized out>, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#30 0x00007f299de65daa in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#31 0x00007f299de69438 in ?? () from /usr/lib64/libglib-2.0.so.0
#32 0x00007f299de695fc in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#33 0x00007f29a1fe9436 in QEventDispatcherGlib::processEvents (this=0x673390, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#34 0x00007f299f41acfe in QGuiEventDispatcherGlib::processEvents (this=0x7fffaa4cbce0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#35 0x00007f29a1fbed62 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#36 0x00007f29a1fbf13c in QEventLoop::exec (this=0x7fffaa4cf210, flags=) at kernel/qeventloop.cpp:201
#37 0x00007f29a1fc1349 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#38 0x00007f2995097e7b in kdemain (argc=1, argv=0x62cc60) at /usr/src/debug/kdebase-workspace-4.2.90/plasma/shells/desktop/main.cpp:50
#39 0x000000000040724e in launch (argc=1, _name=0x62cc28 "/usr/bin/plasma-desktop", args=<value optimized out>, cwd=0x0, envc=0, envs=0x62cc48 "", reset_env=false, tty=0x0, avoid_loops=false, 
    startup_id_str=0x40a404 "0") at /usr/src/debug/kdelibs-4.2.90/kinit/kinit.cpp:672
#40 0x0000000000407a78 in handle_launcher_request (sock=7, who=<value optimized out>) at /usr/src/debug/kdelibs-4.2.90/kinit/kinit.cpp:1164
#41 0x0000000000408025 in handle_requests (waitForPid=0) at /usr/src/debug/kdelibs-4.2.90/kinit/kinit.cpp:1357
#42 0x0000000000408b66 in main (argc=2, argv=0x7fffaa4d00a8, envp=0x7fffaa4d00c0) at /usr/src/debug/kdelibs-4.2.90/kinit/kinit.cpp:1784

Reported using DrKonqi
Comment 1 Christophe Marin 2009-06-14 16:31:29 UTC
Qt Version: 4.5.2

You're using the wrong Qt repository. Replace KDE:Qt45 with KDE:Qt. and see if you're able to reproduce this crash.
Comment 2 jbrsubscribe 2009-06-14 18:02:06 UTC
I have replaced the Qt repository and re-installed Qt. I will inform you if
the error re-occurs.


On Sun, Jun 14, 2009 at 4:31 PM, Christophe Giboudeaux <
cgiboudeaux@gmail.com> wrote:

> https://bugs.kde.org/show_bug.cgi?id=196416
>
>
> Christophe Giboudeaux <cgiboudeaux@gmail.com> changed:
>
>           What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>             Status|UNCONFIRMED                 |NEEDSINFO
>                 CC|                            |cgiboudeaux@gmail.com
>         Resolution|                            |WAITINGFORINFO
>
>
>
>
> --- Comment #1 from Christophe Giboudeaux <cgiboudeaux gmail com>
>  2009-06-14 16:31:29 ---
> Qt Version: 4.5.2
>
> You're using the wrong Qt repository. Replace KDE:Qt45 with KDE:Qt. and see
> if
> you're able to reproduce this crash.
>
> --
> Configure bugmail: https://bugs.kde.org/userprefs.cgi?tab=email
> ------- You are receiving this mail because: -------
> You reported the bug.
>
Comment 3 FiNeX 2009-08-03 20:03:35 UTC
*** Bug 202420 has been marked as a duplicate of this bug. ***
Comment 4 Dario Andres 2009-08-12 15:17:47 UTC
*** Bug 199948 has been marked as a duplicate of this bug. ***
Comment 5 Dario Andres 2009-08-12 15:17:56 UTC
*** Bug 203565 has been marked as a duplicate of this bug. ***
Comment 6 Dario Andres 2009-08-12 15:30:23 UTC
I could reproduce this bug here using:

Qt: 4.5.2 (KDE-Qt git commit 5b7a2eb42acfdea07c6075556cb43e2c95852145
        Date:   Tue Jul 28 14:10:47 2009 -0300)
KDE: 4.3.63 (KDE 4.3.63 (KDE 4.4 >= 20090805))
kdelibs svn rev. 1009010 / kdebase svn rev. 1009010
on ArchLinux i686 - Kernel 2.6.30.4

Steps:

- Copy *some link* from this page (ex. select "bug 196416" without the quotes and copy it using Ctrl+C)  (This is important as if you select normal text the Notes widget will be added without asking)
- Now, middle click on the Plasma desktop (or over a widget, or even inside plasmoid viewer)
A menu should appear to allow to select the widget you want to use for that data, the options are: "Notes", "Web Browser" and "Open Brain" (if you have this widget installed..)
- Select one of them (any...)
Plasma will crash with the backtrace attached (look at bug 203565 for an updated backtrace@KDE4.3)

Regards
Comment 7 Dario Andres 2009-09-06 23:25:03 UTC
*** Bug 206521 has been marked as a duplicate of this bug. ***
Comment 8 Dario Andres 2009-09-07 13:47:22 UTC
*** Bug 206574 has been marked as a duplicate of this bug. ***
Comment 9 Dario Andres 2009-09-09 15:00:27 UTC
*** Bug 206780 has been marked as a duplicate of this bug. ***
Comment 10 Dario Andres 2009-09-16 18:44:11 UTC
*** Bug 207594 has been marked as a duplicate of this bug. ***
Comment 11 Dario Andres 2009-09-26 15:41:43 UTC
*** Bug 208574 has been marked as a duplicate of this bug. ***
Comment 12 Dario Andres 2009-10-26 13:14:13 UTC
*** Bug 211921 has been marked as a duplicate of this bug. ***
Comment 13 Dario Andres 2009-10-26 16:06:42 UTC
*** Bug 211932 has been marked as a duplicate of this bug. ***
Comment 14 Beat Wolf 2009-11-08 12:35:18 UTC
using trunk, the same procedure results in a slightly differnt crash.

Application: Plasma Workspace (plasma-desktop), signal: Segmentation fault
[Current thread is 1 (Thread 0xb678a780 (LWP 3396))]

Thread 2 (Thread 0xab772b70 (LWP 3399)):
#0  0x006ba422 in __kernel_vsyscall ()
#1  0x0049ee15 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x01f347d7 in QWaitConditionPrivate::wait (this=0x9d736c0, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#3  0x01f345db in QWaitCondition::wait (this=0x9d5c790, mutex=0x9d5c78c, time=4294967295) at thread/qwaitcondition_unix.cpp:159
#4  0x00744052 in QHostInfoAgent::run (this=0x9d5c780) at kernel/qhostinfo.cpp:252
#5  0x01f33350 in QThreadPrivate::start (arg=0x9d5c780) at thread/qthread_unix.cpp:244
#6  0x0049a80e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0x062237ee in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb678a780 (LWP 3396)):
[KCrash Handler]
#6  0x0455fc84 in QScopedPointer<QGraphicsSceneEventPrivate, QScopedPointerDeleter<QGraphicsSceneEventPrivate> >::data (this=0xc) at ../../include/QtCore/../../src/corelib/tools/qscopedpointer.h:145
#7  0x0455f42a in qGetPtrHelper<QScopedPointer<QGraphicsSceneEventPrivate, QScopedPointerDeleter<QGraphicsSceneEventPrivate> > > (p=...)
    at ../../include/QtCore/../../src/corelib/global/qglobal.h:2290
#8  0x0455f532 in QGraphicsSceneDragDropEvent::d_func (this=0x0) at graphicsview/qgraphicssceneevent.h:277
#9  0x0455ebe5 in QGraphicsSceneDragDropEvent::pos (this=0x0) at graphicsview/qgraphicssceneevent.cpp:1279
#10 0x00f0be36 in Plasma::ContainmentPrivate::dropData (this=0x9cc9e88, scenePos=..., screenPos=..., dropEvent=0x0) at /home/kde-devel/kde/src/kdelibs/plasma/containment.cpp:1313
#11 0x00f1b03e in Plasma::ContainmentActions::paste (this=0x9ce4fb8, scenePos=..., screenPos=...) at /home/kde-devel/kde/src/kdelibs/plasma/containmentactions.cpp:288
#12 0x013cd258 in Paste::contextEvent (this=0x9ce4fb8, event=0xbfacdbb4) at /home/kde-devel/kde/src/kdebase/workspace/plasma/generic/containmentactions/paste/paste.cpp:50
#13 0x00f084a8 in Plasma::Containment::mouseReleaseEvent (this=0x9cd3128, event=0xbfacdbb4) at /home/kde-devel/kde/src/kdelibs/plasma/containment.cpp:600
#14 0x0451a980 in QGraphicsItem::sceneEvent (this=0x9cd3130, event=0xbfacdbb4) at graphicsview/qgraphicsitem.cpp:6402
#15 0x045762fb in QGraphicsWidget::sceneEvent (this=0x9cd3128, event=0xbfacdbb4) at graphicsview/qgraphicswidget.cpp:1104
#16 0x045411e5 in QGraphicsScenePrivate::sendEvent (this=0x9a0e118, item=0x9cd3130, event=0xbfacdbb4) at graphicsview/qgraphicsscene.cpp:1064
#17 0x04541917 in QGraphicsScenePrivate::sendMouseEvent (this=0x9a0e118, mouseEvent=0xbfacdbb4) at graphicsview/qgraphicsscene.cpp:1138
#18 0x045497ec in QGraphicsScene::mouseReleaseEvent (this=0x9aa97d8, mouseEvent=0xbfacdbb4) at graphicsview/qgraphicsscene.cpp:3923
#19 0x04547a4b in QGraphicsScene::event (this=0x9aa97d8, event=0xbfacdbb4) at graphicsview/qgraphicsscene.cpp:3268
#20 0x03e31f74 in QApplicationPrivate::notify_helper (this=0x9a148b8, receiver=0x9aa97d8, e=0xbfacdbb4) at kernel/qapplication.cpp:4251
#21 0x03e2fce3 in QApplication::notify (this=0x9a09d58, receiver=0x9aa97d8, e=0xbfacdbb4) at kernel/qapplication.cpp:3676
#22 0x097325c0 in KApplication::notify (this=0x9a09d58, receiver=0x9aa97d8, event=0xbfacdbb4) at /home/kde-devel/kde/src/kdelibs/kdeui/kernel/kapplication.cpp:302
#23 0x020487f3 in QCoreApplication::notifyInternal (this=0x9a09d58, receiver=0x9aa97d8, event=0xbfacdbb4) at kernel/qcoreapplication.cpp:704
#24 0x03e3401f in QCoreApplication::sendSpontaneousEvent (receiver=0x9aa97d8, event=0xbfacdbb4) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#25 0x03e322b3 in qt_sendSpontaneousEvent (receiver=0x9aa97d8, event=0xbfacdbb4) at kernel/qapplication.cpp:5228
#26 0x0456f91f in QGraphicsView::mouseReleaseEvent (this=0x9f0a1e8, event=0xbface2f0) at graphicsview/qgraphicsview.cpp:3180
#27 0x03e9a130 in QWidget::event (this=0x9f0a1e8, event=0xbface2f0) at kernel/qwidget.cpp:7903
#28 0x042e1558 in QFrame::event (this=0x9f0a1e8, e=0xbface2f0) at widgets/qframe.cpp:557
#29 0x0438c758 in QAbstractScrollArea::viewportEvent (this=0x9f0a1e8, e=0xbface2f0) at widgets/qabstractscrollarea.cpp:991
#30 0x0456dafe in QGraphicsView::viewportEvent (this=0x9f0a1e8, event=0xbface2f0) at graphicsview/qgraphicsview.cpp:2708
#31 0x0438d2bb in QAbstractScrollAreaPrivate::viewportEvent (this=0x9f0b1a8, event=0xbface2f0) at widgets/qabstractscrollarea_p.h:100
#32 0x0438d3a2 in QAbstractScrollAreaFilter::eventFilter (this=0x9f1c5a0, o=0x9f1dfe0, e=0xbface2f0) at widgets/qabstractscrollarea_p.h:116
#33 0x02048ad1 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x9a148b8, receiver=0x9f1dfe0, event=0xbface2f0) at kernel/qcoreapplication.cpp:819
#34 0x03e31f50 in QApplicationPrivate::notify_helper (this=0x9a148b8, receiver=0x9f1dfe0, e=0xbface2f0) at kernel/qapplication.cpp:4247
#35 0x03e304bb in QApplication::notify (this=0x9a09d58, receiver=0x9f1dfe0, e=0xbface2f0) at kernel/qapplication.cpp:3837
#36 0x097325c0 in KApplication::notify (this=0x9a09d58, receiver=0x9f1dfe0, event=0xbface2f0) at /home/kde-devel/kde/src/kdelibs/kdeui/kernel/kapplication.cpp:302
#37 0x020487f3 in QCoreApplication::notifyInternal (this=0x9a09d58, receiver=0x9f1dfe0, event=0xbface2f0) at kernel/qcoreapplication.cpp:704
#38 0x03e3401f in QCoreApplication::sendSpontaneousEvent (receiver=0x9f1dfe0, event=0xbface2f0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#39 0x03e2ece9 in QApplicationPrivate::sendMouseEvent (receiver=0x9f1dfe0, event=0xbface2f0, alienWidget=0x9f1dfe0, nativeWidget=0x9f0a1e8, buttonDown=0x48b7858, lastMouseReceiver=..., 
    spontaneous=true) at kernel/qapplication.cpp:2974
#40 0x03ec7b11 in QETWidget::translateMouseEvent (this=0x9f0a1e8, event=0xbface8bc) at kernel/qapplication_x11.cpp:4360
#41 0x03ec4472 in QApplication::x11ProcessEvent (this=0x9a09d58, event=0xbface8bc) at kernel/qapplication_x11.cpp:3377
#42 0x03efc0dc in x11EventSourceDispatch (s=0x9a17740, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#43 0x0111fe78 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#44 0x01123720 in ?? () from /lib/libglib-2.0.so.0
#45 0x01123853 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#46 0x02080158 in QEventDispatcherGlib::processEvents (this=0x99f4ea8, flags=...) at kernel/qeventdispatcher_glib.cpp:407
#47 0x03efc71c in QGuiEventDispatcherGlib::processEvents (this=0x99f4ea8, flags=...) at kernel/qguieventdispatcher_glib.cpp:202
#48 0x02045c57 in QEventLoop::processEvents (this=0xbfaceb8c, flags=...) at kernel/qeventloop.cpp:149
#49 0x02045d9c in QEventLoop::exec (this=0xbfaceb8c, flags=...) at kernel/qeventloop.cpp:201
#50 0x02048ecf in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#51 0x03e2f9a0 in QApplication::exec () at kernel/qapplication.cpp:3590
#52 0x00208932 in kdemain (argc=1, argv=0xbfaced84) at /home/kde-devel/kde/src/kdebase/workspace/plasma/desktop/shell/main.cpp:112
#53 0x08048809 in main (argc=1, argv=0xbfaced84) at /home/kde-devel/kde/build/kdebase/workspace/plasma/desktop/shell/plasma-desktop_dummy.cpp:3
Comment 15 Dario Andres 2009-11-11 03:40:23 UTC
It could be possible as AFAIR the code changed a bit; it is weird that now it includes QGV stuff.
Comment 16 Dario Andres 2009-11-20 15:50:33 UTC
*** Bug 215312 has been marked as a duplicate of this bug. ***
Comment 17 Dario Andres 2009-11-20 23:15:53 UTC
*** Bug 215492 has been marked as a duplicate of this bug. ***
Comment 18 abelius 2009-11-20 23:51:02 UTC
Hi All,
bug: https://bugs.kde.org/show_bug.cgi?id=215492
was included as a duplicate of this bug, however,..  I am able to select a link from this page and paste it into "web browser" or "notes". 
The sigdev crash occurs in my case when I copy am image from okular onto the clipboard and paste it into "picture frame"
(KDE 4.4.3 / Qt 4.5.3)
cheers,
abelius
Comment 19 Dario Andres 2009-11-21 00:03:45 UTC
Complete steps from bug 215492:
---
1) draw frame in okular while viewing a pdf file
2) select "copy image" in okular
3) paste image on plasma desktop
4) select "picture frame" in the pop-up menu
Comment 20 Dario Andres 2009-11-21 23:32:46 UTC
*** Bug 215611 has been marked as a duplicate of this bug. ***
Comment 21 Dario Andres 2009-11-29 19:38:01 UTC
*** Bug 216455 has been marked as a duplicate of this bug. ***
Comment 22 Torrie Fischer 2009-12-10 03:16:51 UTC
SVN commit 1060831 by tdfischer:

Fixes a bug for when no event is passed.

In ContainmentPrivate::dropData, some bits assumed there was a dropEvent passed.
This doesn't always happen, for instance with ContainmentActions::paste(). The
points needed are instead taken from the scenePos and screenPos.

BUG: 196416

 M  +12 -3     containment.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1060831
Comment 23 Jonathan Thomas 2010-01-04 15:05:45 UTC
*** Bug 221233 has been marked as a duplicate of this bug. ***
Comment 24 Jonathan Thomas 2010-04-28 13:07:38 UTC
*** Bug 235612 has been marked as a duplicate of this bug. ***
Comment 25 Dario Andres 2011-06-26 14:22:51 UTC
*** Bug 276370 has been marked as a duplicate of this bug. ***