Fixes a bug for when no event is passed.

In ContainmentPrivate::dropData, some bits assumed there was a dropEvent passed.
This doesn't always happen, for instance with ContainmentActions::paste(). The
points needed are instead taken from the scenePos and screenPos.

BUG: 196416

svn path=/trunk/KDE/kdelibs/; revision=1060831